# auto-db-pipeline

./: .gitignore  Keywords.py  PDB_filter.py  PDB_to_seq.py  README.md  ensembl_genbank_convert.py  extract_structure.py  extract_structure_2.py  extract_structure_input.py  extract_structure_interactive.py  genbank_mining.py  get_title_from_paper.py  igblast_input.fasta  jesses_function_delivery.py  main.py  paried_chains.json  pdb_id_test.txt  pyproject.toml  requirements.txt  run_genbank_pipeline.ipynb  run_pipeline.ipynb  seq.txt  seq_converter.py  setup.py  test.py  test_paperscraper.py  verify_antibody.py  verify_antibody_ANARCI.py  verify_antibody_SAbDab.py  word_plot_abstracts.py  word_plot_titles.py
SAbDab-master/: LICENCE  README  setup.py
auto_abdab/: __init__.py  auto_abdab.py
auto_abdab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
auto_db_pipeline/: README.md  compare_w_covabdab.ipynb  constants.py  de.ipynb  fetchtypes.py  keywords2papers.py  keywords2pdbs.py  keywords_antigens.py  paper.py  papers2ids.py  papers2info.py  papers2urls.py  papertypes.py  pdbcheck.py  pdbs2info.py  proteinids.py  run_new_pdbs.py  run_papers2ids.py  run_pdbids2info.py  support.py  temp.ipynb  test_scraping.py  utils.py
combine/: draft.ipynb  get_doi_from_pubmed.py  get_poss_pdbs.py  keywords2papers.py  pdb_checker.py  scrape.py  support.py  temp.ipynb  test_scraping.py
data/: abstracts.json  biorxiv_results-2022_01_30.jsonl  titlesabstracts.json  titlesfull.json
downstream_in_use/: PDB_to_seq.py  anarci_cdrs.py  anarci_get_cdr_germline.py  deal_with_patent_seqs.py  (+8 more)
(+498 files in other folders)
