[tool.poetry]
name = "auto-db-pipeline"
version = "0.1.0"
description = "SABSR3 automated data extraction project"
authors = ["Emily Jin, Fabian Spoendlin, Gemma Gordon, Hongyu Qian, Jesse Murray"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.3"
numpy = "~=1.20.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
